Allow full screen of all embedded youtube videos

--- a/AnimationEngine.html
+++ b/AnimationEngine.html
@@ -102,7 +102,7 @@
                                     <br><br>
                                     <h2 class="major">Cloth Simulation</h2>
                                     <h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=0&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Cloth Simulation" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=0&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Cloth Simulation" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
@@ -124,7 +124,7 @@
                                     <br><br>
                                     <h2 class="major">GLTF Skeletal Animations</h2>
                                     <h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/R1GUC9tc6qI?autoplay=0&mute=1&rel=0&loop=1&playlist=R1GUC9tc6qI" title="GLTF Skeletal Animations" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/R1GUC9tc6qI?autoplay=0&mute=1&rel=0&loop=1&playlist=R1GUC9tc6qI" title="GLTF Skeletal Animations" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
@@ -149,7 +149,7 @@
                                     <br><br>
                                     <h2 class="major">Animation Blending</h2>
                                     <h6 style="font-weight: lighter;">1D Blending - Character Locomotion System</h6>
-                                    <iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=0&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="1D Animation Blending" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=0&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="1D Animation Blending" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
@@ -169,7 +169,7 @@
                                     <br>
 
                                     <h6 style="font-weight: lighter;">2D Blending and Blend Editor</h6>
-                                    <iframe src="https://www.youtube.com/embed/qz-U_FMcAm8?autoplay=0&mute=1&rel=0&loop=1&playlist=qz-U_FMcAm8" title="2D Animation Blending" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/qz-U_FMcAm8?autoplay=0&mute=1&rel=0&loop=1&playlist=qz-U_FMcAm8" title="2D Animation Blending" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
@@ -189,7 +189,7 @@
                                     <br><br>
                                     <h2 class="major">Inverse Kinematics</h2>
                                     <h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/P_49QVLzSuA?autoplay=0&mute=1&rel=0&loop=1&playlist=P_49QVLzSuA" title="Inverse Kinematics" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/P_49QVLzSuA?autoplay=0&mute=1&rel=0&loop=1&playlist=P_49QVLzSuA" title="Inverse Kinematics" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
@@ -213,7 +213,7 @@
                                     <br><br>
                                     <h2 class="major">Splines</h2>
                                     <h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/tA0gB2n6e4M?autoplay=0&mute=1&rel=0&loop=1&playlist=tA0gB2n6e4M" title="Splines" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/tA0gB2n6e4M?autoplay=0&mute=1&rel=0&loop=1&playlist=tA0gB2n6e4M" title="Splines" class="trailer dynamic-vid" allowfullscreen></iframe>
                                     <br>
                                     <br>
                                     <h6 style="font-weight: lighter;">About the demo</h6>
