--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -94,7 +94,7 @@
                                     <h6 style="font-weight: lighter;">Release Trailer</h6>
                                     <div class="box alt">
                                         <div class="row gtr-uniform">
-                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid" allowfullscreen></iframe></span></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6_720x405.jpg" alt="Screenshot-2" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg" alt="Screenshot-3" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg" alt="Screenshot-4" /></span></a></div>
@@ -124,7 +124,7 @@
                                         </ul>
                                         <div class="box alt">
                                             <div class="row gtr-uniform">
-                                                <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/LuQprV259zk?mute=1&rel=0" title="Race Section"></iframe></span></div>
+                                                <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/LuQprV259zk?mute=1&rel=0" title="Race Section" allowfullscreen></iframe></span></div>
                                             </div>
                                         </div>
                                     </div>
@@ -158,8 +158,8 @@
                                             <br>
                                             <div class="box alt">
                                                 <div class="row gtr-uniform">
-                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/TrvoZ4u96wc?mute=1&rel=0" title="Intro Cinematic"></iframe></span></div>
-                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wAOc-ivqKMc?mute=1&rel=0" title="Smooth Transitions"></iframe></span></div>
+                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/TrvoZ4u96wc?mute=1&rel=0" title="Intro Cinematic" allowfullscreen></iframe></span></div>
+                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wAOc-ivqKMc?mute=1&rel=0" title="Smooth Transitions" allowfullscreen></iframe></span></div>
                                                 </div>
                                             </div>
                                     </div>
@@ -214,7 +214,7 @@
                                             </ul>
                                             <div class="box alt">
                                                 <div class="row gtr-uniform">
-                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wotQM6_Peco?si=Gk7xG6w62bfvNCaY" title="Vfx Reel"></iframe></span></div>
+                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wotQM6_Peco?si=Gk7xG6w62bfvNCaY" title="Vfx Reel" allowfullscreen></iframe></span></div>
                                                 </div>
                                             </div>
                                     </div>
