--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -93,7 +93,7 @@
                                     <br><br>
                                     <h2 class="major">Feature A</h2>
                                     <h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/2ASpOako-P0?autoplay=1&mute=1&rel=0&loop=1&playlist=2ASpOako-P0" title="Ant Colony Simulation" class="trailer dynamic-vid"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/2ASpOako-P0?autoplay=1&mute=1&rel=0&loop=1&playlist=2ASpOako-P0" title="Ant Colony Simulation" class="trailer dynamic-vid" allowfullscreen></iframe>
                                 </div>
 
                             </div>
