--- a/Entails.html
+++ b/Entails.html
@@ -94,7 +94,7 @@
                                     <h6 style="font-weight: lighter;">Release Trailer</h6>
                                     <div class="box alt">
                                         <div class="row gtr-uniform">
-                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/lKqRAVqub4I?autoplay=1&mute=1&start=17&rel=0&loop=1&playlist=lKqRAVqub4I" title="Entails Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/lKqRAVqub4I?autoplay=1&mute=1&start=17&rel=0&loop=1&playlist=lKqRAVqub4I" title="Entails Release Trailer" class="trailer dynamic-vid" allowfullscreen></iframe></span></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot01.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot01.jpg" alt="Screenshot-1" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot02.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot02.jpg" alt="Screenshot-2" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot03.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot03.jpg" alt="Screenshot-3" /></span></a></div>
@@ -161,7 +161,7 @@
                                     </div>
                                     <div id="menus" class="box my-box">
                                     <h3 class="my-work-separator">Animated Menus</h3>
-                                        <p><span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
+                                        <p>
                                             Worked side by side with one of the animators to create a unique animated menu that suits the theme of the game.
                                             <ul>
                                                 <li>Main menu (with special animations)</li>
@@ -169,6 +169,11 @@
                                                 <li>Credits and initial logo screens</li>
                                             </ul>
                                         </p>
+                                        <div class="box alt">
+                                            <div class="row gtr-uniform">
+                                                <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/-pgDPhr2QCg?si=SrqnN5KGGcNbgkZt" title="Main Menu" allowfullscreen></iframe></span></div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div id="other-gameplay-tasks" class="box my-box">
                                         <h3 class="my-work-separator">Other Gameplay Tasks</h3>
