--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -94,7 +94,7 @@
                                     <h6 style="font-weight: lighter;">Release Trailer</h6>
                                     <div class="box alt">
                                         <div class="row gtr-uniform">
-                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/F10GEwkIaQs?autoplay=1&mute=1&start=5&rel=0&loop=1&playlist=F10GEwkIaQs" title="Seavilizations Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+                                            <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/F10GEwkIaQs?autoplay=1&mute=1&start=5&rel=0&loop=1&playlist=F10GEwkIaQs" title="Seavilizations Release Trailer" class="trailer dynamic-vid" allowfullscreen></iframe></span></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot01.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot01.jpg" alt="Screenshot-2" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot02.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot02.jpg" alt="Screenshot-3" /></span></a></div>
                                             <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot03.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot03.jpg" alt="Screenshot-4" /></span></a></div>
