Added youtube videos to Entails page

--- a/Entails.html
+++ b/Entails.html
@@ -137,7 +137,7 @@
                                     </div>
                                     <div id="station" class="box my-box">
                                         <h3 class="my-work-separator">Station Event</h3>
-                                            <p><span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
+                                            <p>
                                             <ul>
                                                 <li>Collaborated with designers to build one of the levels (station)</li>
                                                 <li>Crafted a high quality cinematic that precedes a mini-boss fight special encounter resembling space invaders</li>
@@ -145,11 +145,15 @@
                                                 <li>Created a variation of one of the main enemies for the encounter</li>
                                             </ul>
                                             </p>
-                                        <br>
+                                            <div class="box alt">
+                                                <div class="row gtr-uniform">
+                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/9-IAYZ4CcKM?si=z5SFs3xXC1wrL9bP" title="Station Event" allowfullscreen></iframe></span></div>
+                                                </div>
+                                            </div>
                                     </div>
                                     <div id="boiler-room" class="box my-box">
                                         <h3 class="my-work-separator">Boiler Room Event</h3>
-                                        <p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
+                                        <p>
                                         <ul>
                                             <li>Worked closely with artists to build one of the levels (boiler room)</li>
                                             <li>With the animators, we put together a bellows-like system that the player can jump on top, to rekindle a fire</li>
@@ -157,7 +161,11 @@
                                             <li>Added another cinematic to indicate that the next level is available</li>
                                         </ul>
                                         </p>
-                                        <br>
+                                        <div class="box alt">
+                                            <div class="row gtr-uniform">
+                                                <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/EyqHmi_33Ms?si=nTQ7-Ok3C1sQDMjg" title="Boiler Room Event" allowfullscreen></iframe></span></div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div id="menus" class="box my-box">
                                     <h3 class="my-work-separator">Animated Menus</h3>
