Update index page

--- a/index.html
+++ b/index.html
@@ -160,12 +160,11 @@
                             <section id="four" class="wrapper alt style1">
                                 <div class="inner">
                                     <h2 class="major">Projects</h2>
-                                    <p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
                                     <section class="features">
                                         <article>
                                             <a href="AnimationEngine.html" class="image clickable-img"><img src="images/main-page/ClothPlusAnim.jpg" alt="Project-Screenshot" /></a>
                                             <h3 class="major">Animation Engine + Cloth Simulation</h3>
-                                            <p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
+                                            <p>In this project, I created an animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
                                             <a href="AnimationEngine.html" class="special blue-on-hover">Learn more</a>
                                         </article>
                                         <article>
@@ -173,18 +172,6 @@
                                             <h3 class="major">Ant Colony Simulation</h3>
                                             <p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
                                             <a href="AntColonySimulation.html" class="special blue-on-hover">Learn more</a>
-                                        </article>
-                                        <article>
-                                            <a href="SpacePartitioning.html" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" /></a>
-                                            <h3 class="major">Space Partitioning + GJK Collision Detection</h3>
-                                            <p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
-                                            <a href="SpacePartitioning.html" class="special blue-on-hover">Learn more</a>
-                                        </article>
-                                        <article>
-                                            <a href="NetworkedAsteroidsGame.html" class="image clickable-img"><img src="images/main-page/NetAsteroidsWithParticles.jpg" alt="Project-Screenshot" /></a>
-                                            <h3 class="major">Networked Asteroids Game</h3>
-                                            <p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
-                                            <a href="NetworkedAsteroidsGame.html" class="special blue-on-hover">Learn more</a>
                                         </article>
                                     </section>
                                 </div>
