Update ant colony simulation page

--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -31,7 +31,7 @@
                                 <a href="#shortcuts" class="blue-on-hover">About</a>
                             </div>
                             <div class="header-nav-element">
-                                <a href="#" class="blue-on-hover">Features</a>
+                                <a href="#impl-details" class="blue-on-hover">Implementation</a>
                             </div>
                             <div class="header-nav-element">
                                 <a href="#footer" class="blue-on-hover">Contact</a>
@@ -63,7 +63,8 @@
                                     <h2 class="major">Shortcuts</h2>
                                     <ul class="actions small">
                                         <li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-                                        <li><a href="#demo-video" class="button small blue-on-hover icon solid fa-link">Demo Video</a></li>
+                                        <li><a href="#demo-video" class="button small blue-on-hover icon solid fa-link">Video</a></li>
+                                        <li><a href="#impl-details" class="button small blue-on-hover icon solid fa-link">Implementation</a></li>
                                     </ul>
                                 </div>
 
