Update animation page

--- a/AnimationEngine.html
+++ b/AnimationEngine.html
@@ -31,7 +31,7 @@
                                 <a href="#shortcuts" class="blue-on-hover">About</a>
                             </div>
                             <div class="header-nav-element">
-                                <a href="#disclaimer" class="blue-on-hover">Features</a>
+                                <a href="#cloth-sim" class="blue-on-hover">Features</a>
                             </div>
                             <div class="header-nav-element">
                                 <a href="#footer" class="blue-on-hover">Contact</a>
@@ -42,7 +42,7 @@
 
 
                 <!-- Banner -->
-                    <section id="banner"> <!--class="shadow-racer-banner"-->
+                    <section id="banner">
                         <div class="inner">
                             <div class="logo"></div>
                             <h2>Animation Engine</h2>
@@ -58,11 +58,6 @@
 
                             <div class="inner">
 
-                                <div id="disclaimer">
-                                    <h2 class="major">Work In Progress</h2>
-                                    <p>This page is currently being worked on.</p>
-                                </div>
-
                                 <div id="shortcuts">
                                     <br><br>
                                     <h2 class="major">Shortcuts</h2>
@@ -74,7 +69,7 @@
                                     <ul class="actions small">
                                         <li><a href="#anim-blending" class="button small blue-on-hover icon solid fa-link">Blending</a></li>
                                         <li><a href="#iks" class="button small blue-on-hover icon solid fa-link">IKs</a></li>
-                                        <li><a href="#" class="button small blue-on-hover icon solid fa-link">Splines</a></li>
+                                        <li><a href="#splines" class="button small blue-on-hover icon solid fa-link">Splines</a></li>
                                     </ul>
                                 </div>
 
