Add research paper with thumbnail to ant colony simulation page

--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -108,9 +108,11 @@
                                 <div id="impl-details"></div>
                                     <br><br>
                                     <h2 class="major">Implementation Details</h2>
-                                    <p>
-                                        
-                                    </p>
+                                    <div class="box alt">
+                                        <div class="row gtr-uniform">
+                                            <div class="col-6"><span class="image fit"><a class="blue-on-hover" href="docs/ant-colony-sim/RESEARCH_PAPER.pdf"><span class="image fit clickable-img"><img src="images/screenshots/ant-colony-sim/Research-Paper-Thumbnail.png" alt="Research Paper Thumbnail" /></span></a></div>
+                                        </div>
+                                    </div>
                                 </div>
 
                             </div>
